# hello-world-cli

./: pyproject.toml
tests/: test.txt
